# hft

./: .clang-format  .clang-tidy  .gitattributes  .gitignore  CMakeLists.txt  README.md  exit.sh  ini_checker.py  main.cpp  pre-commit  set_cpu.sh
cmake/: glaze.cmake  (+2 more)
hft/: CMakeLists.txt  hft_lib.cpp  hft_lib.h
hft/common/: CMakeLists.txt  authorization.cpp  authorization.h  cpu_manager.cpp  cpu_manager.h  cpu_manager_linux.cpp  cpu_manager_macos.cpp  fast_clock.h  fixed_point.hpp  fixed_point_config.hpp  ini_config.hpp  logger.cpp  logger.h  market_data_ring_buffer.hpp  memory_pool.hpp  mpsc_queue_cas.hpp  performance.h  pid_notifier.hpp  precision_config.hpp  scope_exit.h  singleton.h  spsc_queue.cpp  spsc_queue.h  thread.h  thread.hpp  types.h  var_length_ring_buffer.hpp  wait_strategy.h
hft/common/CpuManager/: cgroup_controller.cpp  cgroup_controller.h  cpu_manager.cpp  cpu_manager.h
hft/common/cpumanager/: cpu_manager.cpp  cpu_manager.h
hft/core/: CMakeLists.txt  common.h  dummy.cpp  market_data.h  order_entry.h  protocol_concepts.h  response_manager.cpp  response_manager.h  signature.cpp  signature.h  ssl_socket.cpp  ssl_socket.h
hft/core/NewOroFix44/: CMakeLists.txt  FIX44.xml  NewOroFix44MD_classes.cpp  NewOroFix44MD_classes.hpp  NewOroFix44MD_router.hpp  NewOroFix44MD_traits.cpp  NewOroFix44MD_types.cpp  NewOroFix44MD_types.hpp  NewOroFix44OE_classes.cpp  NewOroFix44OE_classes.hpp  NewOroFix44OE_router.hpp  NewOroFix44OE_traits.cpp  NewOroFix44OE_types.cpp  NewOroFix44OE_types.hpp  NewOroFix44_classes.cpp  NewOroFix44_classes.hpp  NewOroFix44_router.hpp  NewOroFix44_traits.cpp  NewOroFix44_types.cpp  NewOroFix44_types.hpp  execution_report.h  fix-md.xml  fix-oe.xml  fix_app.cpp  fix_app.h  fix_md_app.cpp  fix_md_app.h  fix_md_core.cpp  fix_md_core.h  fix_oe_app.cpp  fix_oe_app.h  fix_oe_core.cpp  fix_oe_core.h  fix_wrapper.cpp  fix_wrapper.h  market_data.h  order_entry.h  order_request.h  response_manager.cpp  response_manager.h  (+4 more)
hft/core/fix/: fix_app.cpp  fix_app.h  fix_md_app.cpp  fix_md_app.h  fix_md_core.cpp  fix_md_core.h  fix_oe_app.cpp  fix_oe_app.h  fix_oe_core.cpp  fix_oe_core.h  fix_sequence_counter.cpp  fix_sequence_counter.h  fix_ssl_transport.h
hft/core/fix/NewOroFix44/: CMakeLists.txt  FIX44.xml  NewOroFix44MD_classes.cpp  NewOroFix44MD_classes.hpp  NewOroFix44MD_router.hpp  NewOroFix44OE_classes.cpp  NewOroFix44OE_classes.hpp  NewOroFix44OE_traits.cpp  NewOroFix44OE_types.cpp  NewOroFix44OE_types.hpp  fix-md.xml  fix-oe.xml
hft/core/http/: futures_exchange_info_fetcher.h  http_client.cpp  http_client.h
hft/core/transport/: file_transport.h
hft/core/websocket/: connection_handler.h  ws_app.cpp.disabled  ws_app.h.disabled  ws_md_app.cpp  ws_md_app.h  ws_md_core.cpp  ws_md_core.h  ws_oe_app.cpp  ws_oe_app.h  ws_oe_core.cpp  ws_oe_core.h  ws_transport.h  ws_transport.tpp
hft/src/: CMakeLists.txt  depth_validator.h  feature_engine.cpp  feature_engine.h  feature_engine.hpp  feature_engine.tpp  inventory_manager.cpp  inventory_manager.h  inventory_model.h  layer_book.h  liquid_taker.h  market_consumer.cpp  market_consumer.h  market_consumer.hpp  market_consumer.tpp  market_consumer_recovery.hpp  market_data_protocol_policy.h  message_adapter_policy.h  oe_traits_config.hpp  order_book.cpp  order_book.h  order_book.hpp  order_book.tpp  order_expiry_manager.h  order_gateway.cpp  order_gateway.h  order_gateway.hpp  order_gateway.tpp  order_manager.cpp  order_manager.h  order_manager.hpp  order_manager.tpp  order_state_manager.cpp  order_state_manager.h  orders.h  position_keeper.cpp  position_keeper.h  protocol_impl.h  quote_reconciler.h  reserved_position_tracker.h  (+11 more)
hft/src/gateway/: fix_market_data_gateway.cpp  fix_market_data_gateway.h  fix_order_gateway.cpp  fix_order_gateway.h  gateway_interface.h  market_data_gateway_interface.h
hft/src/strategy/: base_strategy.hpp  config-momentum_strategy.ini  liquid_taker.cpp  liquid_taker.h  market_maker.cpp  market_maker.h  momentum_strategy.cpp  momentum_strategy.h  strategies.hpp  strategy.hpp  strategy_dispatch.hpp
hft/util/: CMakeLists.txt  _pthread.h  logger.cpp  logger.h
repository/: CMakeLists.txt  broker.cpp  broker.h  main.cpp
test/: CMakeLists.txt  _pthread_tests.cpp  benchmark_decoder_performance_fix_tests.cpp  benchmark_decoder_performance_json_tests.cpp  benchmark_decoder_performance_sbe_tests.cpp  benchmark_decoder_tests.cpp  benchmark_fixed_point_tests.cpp  benchmark_full_pipeline_tests.cpp  benchmark_tests.cpp  connection_handler_tests.cpp  cpu_cgroup_integration_tests.cpp  cpu_priority_tests.cpp  depth_validator_tests.cpp  extract_tests.cpp  feature_engine_tests.cpp  fix_app_tests.cpp  fix_md_app_tests.cpp  fix_md_core_tests.cpp  fix_oe_core_tests.cpp  fix_sequence_counter_tests.cpp  fix_wrapper_tests.cpp  full_pipeline_benchmark_tests.cpp  ini_config_tests.cpp  inventory_manager_tests.cpp  layer_book_integration_tests.cpp  layer_book_tests.cpp  logger_performance_tests.cpp  logger_tests.cpp  memory_pool_tests.cpp  mpsc_tests.cpp  nfr_pf_performance_tests.cpp  onepass_md_decoder_tests.cpp  order_book_tests.cpp  order_gateway_tests.cpp  order_manager_futures_tests.cpp  order_manager_spot_tests.cpp  order_state_manager_tests.cpp  pid_notifier_tests.cpp  position_keeper_tests.cpp  quote_reconcile_tests.cpp  (+18 more)
test/cmake/: google-benchmark.cmake  googletest.cmake
test/data/: README.md
test/data/benchmark/: arise.txt  fall.txt  sideways.txt  sideways2.txt  up.txt
test/data/execution_reports/: cancel_order_response.json  execution_report_canceled.json
test/data/market_data/: trade.json
test/gateway/: test_gateway.cpp  test_gateway.h  test_market_data_gateway.cpp  test_market_data_gateway.h
test/resources/: config-orderbook.ini  config-xrpusdc.ini  config.ini
test/resources/auth/: config-auth.ini.template
test/resources/env/: config-dev.ini
test/resources/strategy/: config-maker.ini  config-mean_reversion_maker-XRP.ini
test/resources/symbol/: config-BTCUSDC.ini  config-BTCUSDT.ini  config-XRPUSDC.ini
test/utils/: fix_message_loader.h  performance_utils.h
(+212 files in other folders)
